Fix tab navigation z-index

--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -16,6 +16,7 @@
   display: flex;
   align-items: center;
   background: #fff;
+  z-index: 2;
 
   .tab {
     flex: 1;
